[project]
name = "cs221-q21-khtn-lvthuc"
version = "0.1.0"
description = "CS221 NLP experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "accelerate>=0.29.3,<1",
    "beautifulsoup4>=4.12.3,<5",
    "bert-score>=0.3.13,<0.4",
    "bs4>=0.0.2,<0.1",
    "datasets>=2.21.0,<3",
    "gensim>=4.3.0,<5",
    "huggingface-hub>=0.24.6,<1",
    "lxml>=5.3.0,<6",
    "matplotlib>=3.8.0,<4",
    "matplotlib-inline>=0.1.7",
    "nltk>=3.9.1,<4",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.0,<3",
    "platformdirs>=4",
    "portalocker>=3.0.0,<4",
    "prompt-toolkit>=3",
    "protobuf>=4.25,<6",
    "psutil>=5",
    "ptflops>=0.7.3,<0.8",
    "ptyprocess>=0.7",
    "pure-eval>=0.2",
    "py-cpuinfo>=9.0.0,<10",
    "pyarrow>=17.0.0,<18",
    "pyasn1>=0.6.0,<0.7",
    "pyasn1-modules>=0.4.0,<0.5",
    "pydantic>=2.10.1,<3",
    "pygments>=2",
    "pyparsing>=3.1.2,<4",
    "python-dateutil>=2.8",
    "pytz>=2024.1",
    "pyyaml>=6.0.1,<7",
    "pyzmq>=25",
    "rank-bm25>=0.2.2,<0.3",
    "regex>=2024.4.28",
    "requests>=2.32.3,<3",
    "requests-oauthlib>=2.0.0,<3",
    "rouge>=1.0.1,<2",
    "rouge-score>=0.1.2,<0.2",
    "rsa>=4.9,<5",
    "safetensors>=0.4.3,<1",
    "scikit-learn>=1.4.0,<2",
    "scipy>=1.12.0,<2",
    "sentencepiece>=0.2.0,<0.3",
    "sentry-sdk>=2.13.0,<3",
    "setproctitle>=1.3.3,<2",
    "six>=1.16",
    "tensorboard>=2.15.0,<3",
    "tensorboard-data-server>=0.7.2,<0.8",
    "tokenizers>=0.19.1,<0.21",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "torchinfo>=1.8.0,<2",
    "tornado>=6",
    "transformers>=4.44.2,<5",
    "wandb>=0.17.7,<1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true